<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.3</version>
        <relativePath />
    </parent>

    <groupId>pl.piomin.services</groupId>
    <artifactId>sample-envoy-proxy</artifactId>
    <version>1.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <sonar.projectKey>piomin_sample-envoy-proxy</sonar.projectKey>
        <sonar.organization>piomin</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <java.version>21</java.version>
    </properties>

    <modules>
        <module>envoy-discovery</module>
        <module>person-service</module>
        <module>product-service</module>
    </modules>

</project>